# Project-Laboratory

./: IMPORTANT COMMANDS  LfD.py  README.md  Readme.md  data.txt  plan.txt
data/: DemonstratedTrajectory_sim_to_real.txt  ExecutedTrajectory.txt  data_comm.txt  data_mes.txt  gbz.m  plan.txt  untitled.m
data/MatLab/: Sim_traj_mes_comm.m
dmp-master/: CMakeLists.txt
dmp-master/script/: LfD.py
fri-library-ros/: CMakeLists.txt  README.md  package.xml
fri-library-ros/include/: FastResearchInterface.h
fri-library-ros/src/: GetRobotControlData.cpp  GetRobotStatusData.cpp  SetRobotControlData.cpp  friudp.cpp
kuka-lwr-ros-examples/lwr_task_examples/lwr_simple_example/: CMakeLists.txt  README.md
kuka-lwr-ros-examples/lwr_task_examples/lwr_simple_example/include/simple_actions/: Collaborate.h  LfD.h  LfD_record.h  linear_cart_action.h
kuka-lwr-ros-examples/lwr_task_examples/lwr_simple_example/launch/: Stick.launch  configure.launch
kuka-lwr-ros-examples/lwr_task_examples/lwr_simple_example/robot/: kuka_lwr.urdf.xacro  single_lwr_robot.urdf.xacro
kuka-lwr-ros-examples/lwr_task_examples/lwr_simple_example/src/: client_action_node.cpp  client_console_node.cpp
kuka-lwr-ros-examples/lwr_task_examples/lwr_simple_example/src/simple_actions/: Collaborate.cpp  LfD_dmp.cpp  LfD_record.cpp  linear_cart_action.cpp  linear_cart_action.cpp.alIpgt
kuka-lwr-ros/kuka_lwr/lwr_controllers/: CMakeLists.txt
kuka-lwr-ros/kuka_lwr/lwr_controllers/include/lwr_controllers/: KinematicChainControllerBase.h
kuka-lwr-ros/kuka_lwr/lwr_controllers/src/: one_task_inverse_kinematics.cpp
kuka-lwr-ros/kuka_lwr/lwr_controllers/src/controllers/: cartesian_position.cpp
kuka-lwr-ros/kuka_lwr/lwr_hw/: CMakeLists.txt  package.xml
kuka-lwr-ros/kuka_lwr/lwr_hw/src/: lwr_hw.cpp  lwr_hw_gazebo_plugin.cpp
kuka-lwr-ros/kuka_lwr/lwr_launch/launch/: simulation.launch
lwr_task_examples/lwr_simple_example/include/simple_actions/: LfD_dmp.h  LfD_replay.h
lwr_task_examples/lwr_simple_example/src/: client_console_node.cpp
lwr_task_examples/lwr_simple_example/src/simple_actions/: LfD.cpp  LfD_replay.cpp
mykuka/: CMakeLists.txt  package.xml
mykuka/launch/: moverobot.launch  myclient.launch  myconsole.launch
mykuka/src/: moverobot.cpp
video/rMD-session-23761/: audio.pcm  specs.txt
